# omniseer

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  Doxyfile  README.md  completion-plan.MD  constraints.txt  index.html  mkdocs.yml  phase0.5-real-test-runbook.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-ml.txt
docs/: index.md  (+2 more)
ros_ws/src/analysis/: package.xml  setup.py
ros_ws/src/analysis/analysis/: path_recorder.py  scan_to_range.py
ros_ws/src/analysis/test/: test_ruff.py  test_xmllint.py
ros_ws/src/bringup/: package.xml  setup.cfg  setup.py
ros_ws/src/bringup/bringup/: wait_for_teensy.py  wait_for_tf.py
ros_ws/src/bringup/config/: bridge_config.yaml  controllers.yaml  ekf_fusion.yaml  ekf_fusion_real.yaml  encoder_odometry.yaml  gz_config.config  kinematics.yaml  mapper_params_online_async.yaml  nav2_params.yaml  ros2_control_hardware.yaml  rviz_config.config  rviz_config.config.rviz  rviz_config.rviz  rviz_real_debug_config.rviz  slam_toolbox_async_online.yaml  twist_mux.yaml  vision_bridge.real.paths.yaml  vision_bridge.real.yaml  yolo.yaml
ros_ws/src/bringup/launch/: bridge.launch.py  common.launch.py  controllers.launch.py  description.launch.py  display_omniseer.launch.py  drivers.launch.py  gazebo.launch.py  nav.launch.py  navigation_launch.py  orchestrate_sim.launch.py  perception.launch.py  real.launch.py  real_io.launch.py  real_vision.launch.py  rf2o.launch.py  rviz.launch.py  rviz_real_debug.launch.py  sensors.launch.py  sim.launch.py  sim_io.launch.py  slam.launch.py  spawn_robot.launch.py  yolo-world.launch.py  yolov11.launch.py
ros_ws/src/bringup/scripts/: install_udev_rules.sh  launch_sim.bash  pre_launch_cleanup.sh  wait_for_teensy.py
ros_ws/src/bringup/test/: test_real_launch_show_args.py  test_real_launch_structure.py  test_ruff.py  test_sim_launch_smoke.py  test_wait_for_teensy.py
ros_ws/src/bringup/worlds/: ci_smoke.world  simple_world.world
ros_ws/src/omniseer_description/: CMakeLists.txt  package.xml  plugin_description.xml
ros_ws/src/omniseer_description/behavior_trees/: BT_v0_NavSpin.xml  bt.xml
ros_ws/src/omniseer_description/examples/: costmap_example.txt  map.meta.json  map.pgm
ros_ws/src/omniseer_description/launch/: select_goal_server.launch.py
ros_ws/src/omniseer_description/meshes/: br_wheel.stl
ros_ws/src/omniseer_description/rviz/: display_omniseer.rviz
ros_ws/src/omniseer_description/scripts/: to_pgm.py  view_frontier_components.sh  view_frontier_e2e.sh  view_frontier_mask.sh  view_goal_component.sh
ros_ws/src/omniseer_description/src/: frontier.cpp  grid_io.cpp  nav2_adapters.cpp  ray_cast.cpp  select_exploration_goal.cpp  select_frontier_from_costmap.cpp  select_goal_server.cpp
ros_ws/src/omniseer_description/test/: test_components.cpp  test_frontier_e2e.cpp  test_frontier_mask.cpp  test_goals_rank.cpp  test_goals_select.cpp  test_grid_io.cpp  test_ray_cast.cpp  test_ray_cast_real.cpp
ros_ws/src/omniseer_description/urdf/: omniseer.urdf
ros_ws/src/omniseer_experiments/: package.xml  setup.cfg  setup.py
ros_ws/src/omniseer_experiments/omniseer_experiments/: __init__.py  bundle.py  evidence_annotation.py  record_run.py  run_inspection.py  run_report.py  run_retrieval.py  system_telemetry.py
ros_ws/src/omniseer_experiments/test/: test_bundle.py  test_copyright.py  test_evidence_annotation.py  test_record_run.py  test_run_inspection.py  test_run_report.py  test_run_retrieval.py  test_system_telemetry.py  test_xmllint.py
ros_ws/src/omniseer_msgs/: CMakeLists.txt  package.xml
ros_ws/src/omniseer_msgs/msg/: VisionDetection2D.msg  VisionDetections.msg  VisionPerfSummary.msg  WheelEncoderCounts.msg
ros_ws/src/omniseer_vision_bridge/: CMakeLists.txt  package.xml
ros_ws/src/omniseer_vision_bridge/src/: evidence_frame_sink.cpp  vision_bridge_node.cpp  vision_bridge_runtime.cpp
ros_ws/src/omniseer_vision_bridge/test/: test_evidence_frame_sink.cpp
ros_ws/src/robot_diag_control/: package.xml  setup.cfg  setup.py
ros_ws/src/robot_diag_control/resource/: robot_diag_control
ros_ws/src/robot_diag_control/robot_diag_control/: __init__.py  cli.py  gateway_client.py  monitor_gui.py  monitor_shell.py  overlay_viewer.py  preview_viewer.py
ros_ws/src/robot_diag_control/test/: __init__.py  test_cli.py  test_gateway_client.py  test_monitor_gui.py  test_monitor_shell.py  test_overlay_viewer.py  test_preview_viewer.py
ros_ws/src/robot_diag_control_cpp/: CMakeLists.txt  package.xml
ros_ws/src/robot_diag_control_cpp/src/: gateway_state.cpp  grpc_server.cpp  platform_status_sampler.cpp  preview_command_factory.cpp  preview_process_manager.cpp  robot_diag_control_cpp_node.cpp  robot_gateway_service.cpp  teleop_manager.cpp
ros_ws/src/robot_diag_control_cpp/test/: test_gateway_state.cpp  test_grpc_server.cpp  test_preview_command_factory.cpp  test_preview_process_manager.cpp  test_teleop_manager.cpp
ros_ws/src/robot_io_adapters/: CMakeLists.txt  package.xml
ros_ws/src/robot_io_adapters/src/: encoder_counts_to_odometry_main.cpp  encoder_counts_to_odometry_node.cpp  odometry_math.cpp  scan_to_range.cpp  scan_to_range_main.cpp
ros_ws/src/robot_io_adapters/test/: test_odometry_math.cpp  test_scan_to_range.cpp
vision/: CMakeLists.txt
vision/apps/: consumer_pipeline_test.cpp  image_buffer_pool_test.cpp  jsonl_telemetry_test.cpp  producer_pipeline_test.cpp  rga_preprocess_test.cpp  rknn_runner_test.cpp  rolling_telemetry_test.cpp  v4l2_capture_test.cpp  vision_harness.cpp  vision_pipeline_integration_test.cpp  yolo_world_postprocess_test.cpp  yolo_world_text_embeddings_test.cpp
vision/src/: class_list.cpp  consumer_pipeline.cpp  dma_heap_alloc.cpp  image_buffer_pool.cpp  jsonl_telemetry.cpp  pipeline.cpp  producer_pipeline.cpp  rga_preprocess.cpp  rknn_runner.cpp  spsc_ring.cpp  telemetry_timing.hpp  time_utils.cpp  v4l2_capture.cpp  yolo_world_postprocess.cpp  yolo_world_text_embeddings.cpp
vision/testdata/text_embeddings/: classes_mug_pen.txt  classes_person_bus.txt  clip_text_fp16.rknn
vision/tools/: analyze_telemetry.py
(+314 files in other folders)
