[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omniseer"
version = "0.1.0"
requires-python = ">=3.9,<3.13"
dependencies = [
    "ultralytics==8.3.168",
    "opencv-python==4.11.0.86",
    "lap==0.5.12",
    "numpy<2",
    "typing-extensions>=4.4.0",
    "clip @ git+https://github.com/ultralytics/CLIP.git@a6238961f9fab312d99c7709f8c7485b3f9a9b50",
]

[project.optional-dependencies]
dev = [
    "ruff==0.13.3",
    "pre-commit==4.3.0",
    "pytest==7.4.4",
    "colcon-common-extensions==0.3.0",
]
ml = [
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torchaudio==2.8.0",
]

[tool.ruff]
target-version = "py39"        # ROS Python
line-length = 120
extend-exclude = ["build", "install", "log", ".venv", "ros_ws/src/omniseer_gz_assets", "sim/models"]
src = ["ros_ws/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["D203", "D213", "UP031", "RUF005"]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
# Long help/doc strings in launchers
"ros_ws/src/bringup/launch/orchestrate_sim.launch.py" = ["E501"]
"ros_ws/src/bringup/launch/sim.launch.py" = ["E501"]
"ros_ws/src/yolo_ros/yolo_bringup/launch/yolo.launch.py" = ["E501"]
