<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>analysis</name>
  <version>1.0.0</version>
  <description>Analysis tooling</description>
  <maintainer email="jonas.buro1@gmail.com">selfsim</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ros_gz_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>ros_gz_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
