<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>1.0.0</version>
  <description>Entrypoints for simulation/real</description>
  <maintainer email="jonas.buro1@gmail.com">selfsim</maintainer>
  <license>Apache-2.0</license>

  <build_depend>rclpy</build_depend>
  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>

  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>twist_mux_msgs</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>mecanum_drive_controller</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_graph</exec_depend>
  <exec_depend>rqt_tf_tree</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>pytest</test_depend>
  <!-- Listed so CI and tooling know tests require ruff. In CI we install via pip and skip rosdep for this key. -->
  <test_depend>ruff</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros plugin_path="${prefix}/lib"/>
    <gazebo_ros gazebo_model_path="${prefix}/../"/>
  </export>

</package>
