<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omniseer_description</name>
  <version>1.0.0</version>
  <description>Omniseer description assets: meshes, URDF</description>
  <maintainer email="jonas.buro1@gmail.com">selfsim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>xacro</test_depend>
  <!-- Needed for C++ gtests in CMakeLists.txt (ament_cmake_gtest) -->
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
