<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omniseer_experiments</name>
  <version>0.1.0</version>
  <description>Experiment recording and run-bundle tooling for Omniseer perception runs.</description>
  <maintainer email="jonas.buro1@gmail.com">selfsim</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>omniseer_msgs</depend>
  <depend>yolo_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
