<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_diag_control</name>
  <version>0.1.0</version>
  <description>Python client tools and shared protobuf contract for the operator gateway.</description>
  <maintainer email="jonas.buro1@gmail.com">selfsim</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>python3-grpcio</exec_depend>
  <exec_depend>python3-protobuf</exec_depend>
  <exec_depend>python3-tk</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
